# tweet-wakatime-stats

./: .gitignore  CHANGELOG.md  README.md  lambda_function.py  pyproject.toml  upload.sh
future-0.18.2.dist-info/: RECORD
src/: lambda_function.py  secret.py  twitter.py
src/chardet-4.0.0.dist-info/: RECORD
